add cell labels

--- a/P5.ipynb
+++ b/P5.ipynb
@@ -35,6 +35,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drawing Helper"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -51,6 +58,13 @@
     "        cv2.rectangle(imcopy, bbox[0], bbox[1], color, thick)\n",
     "    # Return the image copy with boxes drawn\n",
     "    return imcopy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HOG Feature Extraction Interface"
    ]
   },
   {
@@ -136,6 +150,13 @@
     "        features.append(np.concatenate(file_features))\n",
     "    # Return list of feature vectors\n",
     "    return features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sliding Window Implementation"
    ]
   },
   {
@@ -240,6 +261,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Settings and Parameter Definition"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
@@ -263,6 +291,13 @@
     "hog_feat = True # HOG features on or off\n",
     "\n",
     "bGrid = False # GridSearch for Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HOG Visualization of Car Image"
    ]
   },
   {
@@ -317,6 +352,13 @@
     "plt.subplot(122)\n",
     "plt.imshow(hog_image, cmap='gray')\n",
     "plt.title('HOG Visualization')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HOG Visualization of Non-Car Image"
    ]
   },
   {
@@ -475,52 +517,14 @@
     "    # Concatenate the histograms into a single feature vector\n",
     "    hist_features = np.concatenate((channel1_hist[0], channel2_hist[0], channel3_hist[0]))\n",
     "    # Return the individual histograms, bin_centers and feature vector\n",
-    "    return hist_features\n",
-    "\n",
-    "# Define a function that takes an image,\n",
-    "# start and stop positions in both x and y, \n",
-    "# window size (x and y dimensions),  \n",
-    "# and overlap fraction (for both x and y)\n",
-    "def slide_window(img, x_start_stop=[None, None], y_start_stop=[None, None], \n",
-    "                    xy_window=(64, 64), xy_overlap=(0.5, 0.5)):\n",
-    "    # If x and/or y start/stop positions not defined, set to image size\n",
-    "    if x_start_stop[0] == None:\n",
-    "        x_start_stop[0] = 0\n",
-    "    if x_start_stop[1] == None:\n",
-    "        x_start_stop[1] = img.shape[1]\n",
-    "    if y_start_stop[0] == None:\n",
-    "        y_start_stop[0] = 0\n",
-    "    if y_start_stop[1] == None:\n",
-    "        y_start_stop[1] = img.shape[0]\n",
-    "    # Compute the span of the region to be searched    \n",
-    "    xspan = x_start_stop[1] - x_start_stop[0]\n",
-    "    yspan = y_start_stop[1] - y_start_stop[0]\n",
-    "    # Compute the number of pixels per step in x/y\n",
-    "    nx_pix_per_step = np.int(xy_window[0]*(1 - xy_overlap[0]))\n",
-    "    ny_pix_per_step = np.int(xy_window[1]*(1 - xy_overlap[1]))\n",
-    "    # Compute the number of windows in x/y\n",
-    "    nx_buffer = np.int(xy_window[0]*(xy_overlap[0]))\n",
-    "    ny_buffer = np.int(xy_window[1]*(xy_overlap[1]))\n",
-    "    nx_windows = np.int((xspan-nx_buffer)/nx_pix_per_step) \n",
-    "    ny_windows = np.int((yspan-ny_buffer)/ny_pix_per_step) \n",
-    "    # Initialize a list to append window positions to\n",
-    "    window_list = []\n",
-    "    # Loop through finding x and y window positions\n",
-    "    # Note: you could vectorize this step, but in practice\n",
-    "    # you'll be considering windows one by one with your\n",
-    "    # classifier, so looping makes sense\n",
-    "    for ys in range(ny_windows):\n",
-    "        for xs in range(nx_windows):\n",
-    "            # Calculate window position\n",
-    "            startx = xs*nx_pix_per_step + x_start_stop[0]\n",
-    "            endx = startx + xy_window[0]\n",
-    "            starty = ys*ny_pix_per_step + y_start_stop[0]\n",
-    "            endy = starty + xy_window[1]\n",
-    "            \n",
-    "            # Append window position to list\n",
-    "            window_list.append(((startx, starty), (endx, endy)))\n",
-    "    # Return the list of windows\n",
-    "    return window_list\n"
+    "    return hist_features\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Data Preparation"
    ]
   },
   {
@@ -586,6 +590,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classifier Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -623,6 +634,13 @@
     "print('For these',n_predict, 'labels: ', y_test[0:n_predict])\n",
     "t2 = time.time()\n",
     "print(round(t2-t, 5), 'Seconds to predict', n_predict,'labels with SVC')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sliding Window Visualization"
    ]
   },
   {
@@ -672,6 +690,13 @@
     "    \n",
     "plt.imshow(window_img)\n",
     "plt.title('Windows to search')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vehicle Detection Visualization"
    ]
   },
   {
@@ -743,6 +768,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Heat Map Implementation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
@@ -802,6 +834,13 @@
     "from IPython.display import HTML\n",
     "\n",
     "from scipy.ndimage.measurements import label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline Function Implementation"
    ]
   },
   {
@@ -883,6 +922,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Video Processing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -901,7 +947,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  9%|▉         | 119/1261 [01:58<18:53,  1.01it/s]"
+      " 94%|█████████▍| 1187/1261 [19:58<01:15,  1.02s/it]"
      ]
     }
    ],
